# binary-hacks-rebooted

./: README.md  toc.md
ch01_introduction/01_reading/: hello.tar  invisible.txt
ch01_introduction/02_introduction-to-assembly-language/: add.c  run_in_docker.sh
ch01_introduction/03_revisit-hello-world/: Dockerfile  hello.c  hello_exec_byte.c  hello_for_elfhack.asm  hello_syscall.asm  hello_syscall.c  hello_syscall_2.c  run.sh  run_in_docker.sh
ch02_elf/04_segment/: hello.c  hello_simple.c  phdr.c  run_in_docker.sh
ch02_elf/05_ld-linux_so_environment_variables/: audit.c  fuga.c  hoge.c  main.c  run_in_docker.sh
ch02_elf/06_ld-linux-so-path/: README.md  foo.c  main.c  run.sh
ch02_elf/07_dlopen/: .gitignore  Makefile  dlopen-sample.c  libhello.c  main-hook.c  malloc-hook.c  say_hello.c
ch02_elf/08_ifunc/: .gitignore  bar.c  change_ifunc_resolve_timing.c  foo.c  ifunc_basic.c  ifunc_order.c  main.c  run_in_docker.sh
ch02_elf/09_symbol_table/: dt_hash_search.c  elf_hash.c  foo.c  gnu_hash.c  main.c  run_in_docker.sh
ch02_elf/10_tls/: Dockerfile  hoge.c  main.c  run_in_docker.sh
ch02_elf/11_core/: crash.c  run.sh  show_pic.c
ch02_elf/12_auxval/: Dockerfile  README.md  buffer_overflow.c  jump_at_entry.c  read_stack.c  run_in_docker.sh  show_stack.c  stack_canary.c  use_getauxval.c
ch02_elf/13_static-link/: Dockerfile  dump_proc_maps.c  global_var_ptr.c  hello.c  hoge.c  main.c  print_errno.c  run_in_docker.sh  tls.c
ch02_elf/14_sold/: Dockerfile  foo.c  main.c  (+1 more)
ch06_security/63_fuzzing_libafl_tuning/improved_fuzzer/: Cargo.toml  main.rs
(+233 files in other folders)
